--- a/css/iconselect.css
+++ b/css/iconselect.css
@@ -18,13 +18,13 @@ and open the template in the editor.
      margin: 0px;
      padding: 0px;
      width: 48px; /* sil */
-     height: 36px; /* sil */
+     height: 32px; /* sil */
      border: 1px solid #999999;
 
      -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
      border-radius: 3px;
-
+	 z-index:300;
  }
 
  .icon-select .selected-box:hover {
@@ -33,7 +33,7 @@ and open the template in the editor.
      margin: 0px;
      padding: 0px;
      width: 48px; /* sil */
-     height: 36px; /* sil */
+     height: 32px; /* sil */
      border: 1px solid #000000;
      background-color: #FFFFFF;
 
@@ -68,19 +68,19 @@ and open the template in the editor.
  .icon-select .box {
 
      position: absolute;
-     top:0px;
-     left:71px;
+     top:-1px;
+     left:51px;
      margin: 0px;
      padding: 0px;
      width: 170px; /* sil */
      height: 170px; /* sil */
-     border: 1px solid #EEEEEE;
+     border: 1px solid #999;
      background-color: #EEEEEE;
 
      -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
      border-radius: 3px;
-     
+     z-index:300;
      
      overflow:auto;
      /*
@@ -95,8 +95,7 @@ and open the template in the editor.
      padding: 0px;
      width: 48px; /* sil */
      height: 48px; /* sil */
-     border: 1px solid #CCCCCC;
-     background-color: #FFFFFF;
+
 
      -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
@@ -116,7 +115,7 @@ and open the template in the editor.
      padding: 0px;
      width: 48px; /* sil */
      height: 48px; /* sil */
-     border: 1px solid #EEEEEE;
+     border: 1px solid #999;
      background-color: #EEEEEE;
 
      -webkit-border-radius: 3px;
@@ -126,3 +125,7 @@ and open the template in the editor.
      overflow:hidden;
      float: left;
  }
+ 
+  .icon-select .icon img {
+	  
+	  }
